--- a/frontend/src/components/MyRatings.module.css
+++ b/frontend/src/components/MyRatings.module.css
@@ -178,3 +178,14 @@
 .score-box.score-5 {
     background-color: #2AB999; /* Darker Green */
 }
+
+.total-ratings {
+    font-size: 20px;
+    color: white;
+    margin-bottom: 18px;
+    text-align: left;
+}
+
+.ratings-value {
+    font-weight: bold; /* Bold weight for the value */
+}
