--- a/frontend/src/components/ConfirmationModal.module.css
+++ b/frontend/src/components/ConfirmationModal.module.css
@@ -22,13 +22,14 @@
 
 .modal h3 {
     line-height: 1.5; /* Set line spacing to 1.5 */
-    margin-bottom: 20px; /* Optional spacing */
+    margin-bottom: 30px; /* Optional spacing */
 }
 
 .buttons {
     margin-top: 20px;
     display: flex;
     justify-content: space-around;
+    
 }
 
 
@@ -37,8 +38,10 @@
     color: white;
     border: none;
     padding: 10px 20px;
-    border-radius: 5px;
+    border-radius: 25px;
     cursor: pointer;
+    font-size: 15pt;
+    width: 100pt;
 }
 
 .cancelButton {
@@ -46,8 +49,10 @@
     color: black;
     border: none;
     padding: 10px 20px;
-    border-radius: 5px;
+    border-radius: 25px;
     cursor: pointer;
+    font-size: 15pt;
+    width: 100pt;
 }
 
 .confirmButton:hover {
