--- a/frontend/src/components/Header.module.css
+++ b/frontend/src/components/Header.module.css
@@ -67,14 +67,22 @@
     display: inline-block;
 }
 
+/* Search Icon */
+.searchbuttonsContainer img {
+    width: 69px; /* Adjust the size of the Search icon */
+    height: auto; /* Maintain aspect ratio */
+    cursor: pointer;
+}
+
 .signedInIndicator {
     position: absolute;
     top: -5px;
     right: -7px;
     width: 20px;
     height: 20px;
-    background-color: #cd2d2d;
+    background-color: #94C93D;
     border-radius: 90%;
     border: 4px solid white;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
 }
+
