--- a/frontend/src/components/LandlordProfile.module.css
+++ b/frontend/src/components/LandlordProfile.module.css
@@ -98,11 +98,12 @@
     color: #4D55A4;
     position: relative;
     max-width: 300px;
-    white-space: normal;
+    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     margin-top:0px;
-    overflow-wrap: break-word;
+    overflow-wrap: normal;
+
 }
 
 .landlord-name-container{
