fixed the bar color

--- a/frontend/src/components/LandlordProfile.module.css
+++ b/frontend/src/components/LandlordProfile.module.css
@@ -305,6 +305,10 @@
     
     
 }
+.excellent-bar{
+    background-color: #27B797;
+    height: 100%; 
+}
 
 .green-bar {
     background-color: #8EC860;
